# iccp

./: CMakeLists.txt  README.md
src/actuator/: actuator.cpp  actuator.hpp
src/client/: client.cpp  client.hpp
src/common/: common.hpp
src/manager/: manager.cpp  manager.hpp
src/protocol/: protocol.cpp  protocol.hpp
src/sensor/: sensor.cpp  sensor.hpp
